--- a/css/index.css
+++ b/css/index.css
@@ -9,12 +9,18 @@
   --accent-green-dark: #107c04;
   --text-yellow: rgb(255, 238, 0);
   --footer-height: 7em;
+  --header-height: 10.5em;
+  --wes-height: 5em;
+  --header-floor: calc(var(--header-height) - var(--wes-height));
+}
+
+html {
+  background: linear-gradient(to top, rgb(115, 162, 233), rgb(91, 140, 213), rgb(31, 67, 121), rgb(45, 78, 120), rgb(91, 140, 213), rgb(115, 162, 233));
+  font-family: OpenSans;
 }
 
 body {
-  background-color: var(--accent-blue);
   color: var(--accent-white);
-  font-family: OpenSans;
 }
 
 a {
@@ -22,35 +28,93 @@ a {
   color: var(--accent-white);
 }
 
-.header-primary {
+.header {
   display: grid;
-  grid-template-columns: 3em auto;
+  grid-template-columns: 3em 1fr 8em;
   grid-template-rows: 4em 2.5em 4em;
+  position: relative;
 }
-.header-primary .piranha_plant {
-  width: 3.5em;
-  margin-top: auto;
-  margin-left: -0.2em;
+.header_jump-block {
+  position: absolute;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+  margin-top: 0.5em;
+  width: 2.5em;
 }
-.header-primary_pipe_end_wrapper {
+.header_jump-block-first {
+  right: 10em;
+  -webkit-animation-name: box-first;
+          animation-name: box-first;
+}
+.header_jump-block-second {
+  right: 13.5em;
+  -webkit-animation-name: box-second;
+          animation-name: box-second;
+}
+.header_entry-pipe {
+  z-index: 1;
+  grid-row: 1;
+  grid-column: 3;
+  height: 2em;
+  width: 80%;
+  background-color: red;
+  background: linear-gradient(to right, rgb(54, 109, 49), rgb(140, 213, 130) 15% 25%, rgb(9, 50, 5));
+  border-radius: 0 0 0 0.2em;
+  box-shadow: inset 0 -0.1em 0.3em rgb(9, 50, 5);
+}
+.header .super-wes {
+  -webkit-animation-name: super-wes;
+          animation-name: super-wes;
+  top: -3em;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+  grid-row: 1;
+  grid-column: 3;
+  width: 4em;
+  height: 5em;
+  transform: scalex(-1);
+  position: absolute;
+  right: 3em;
+}
+.header .super-wes_still, .header .super-wes_jump {
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+  width: 4em;
+  height: 5em;
+  position: absolute;
+}
+.header .super-wes_still {
+  -webkit-animation-name: still;
+          animation-name: still;
+}
+.header .super-wes_jump {
+  -webkit-animation-name: jump;
+          animation-name: jump;
+  opacity: 0;
+}
+.header_pipe_end_wrapper {
   width: 3.4em;
   grid-row: 2;
+  z-index: 1;
 }
-.header-primary_pipe_end {
+.header_pipe_end {
+  z-index: 1;
   height: 100%;
   background: linear-gradient(to right, rgb(54, 109, 49), rgb(140, 213, 130) 15% 25%, rgb(9, 50, 5));
   border-radius: 0 0.2em 0.2em 0;
   box-shadow: inset 0 -0.1em 0.3em rgb(9, 50, 5);
   position: relative;
 }
-.header-primary_pipe_end_connect {
+.header_pipe_end_connect {
+  z-index: 1;
   height: 0.1em;
   position: absolute;
   top: 2%;
   width: 100%;
   background: linear-gradient(90deg, transparent 5%, rgba(255, 255, 255, 0.563) 10% 12%, transparent 40%);
 }
-.header-primary_pipe {
+.header_pipe {
+  z-index: 1;
   grid-row: 3;
   width: 3em;
   height: 100%;
@@ -58,17 +122,17 @@ a {
   box-shadow: 0em 2em 2em -1em rgb(3, 52, 10) inset;
   border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
 }
-.header-primary > h1 {
-  grid-column: 2;
+.header > h1 {
+  grid-column: 2/4;
   grid-row: 3;
   margin: auto;
-  text-shadow: 1px 1px 1px #000;
+  text-shadow: 1px 2px 2px #000;
   text-align: center;
   font-weight: bold;
-  font-family: PressStart2P;
+  font-family: pressstart2p;
   font-size: 1.5em;
   text-transform: uppercase;
-  color: rgb(255, 238, 0);
+  color: var(--text-yellow);
 }
 
 .primary-nav {
@@ -78,7 +142,7 @@ a {
   z-index: 10;
   width: 100%;
   min-height: 3em;
-  background: linear-gradient(to top, rgb(54, 109, 49), rgb(140, 213, 130) 25% 40%, rgb(9, 50, 5));
+  background: linear-gradient(to top, rgb(31, 70, 28), rgb(140, 213, 130) 25% 40%, rgb(9, 50, 5));
 }
 .primary-nav > ol {
   display: grid;
@@ -90,8 +154,9 @@ a {
 }
 .primary-nav > ol > li > a {
   margin: auto;
+  letter-spacing: 0em;
   font-size: 0.75em;
-  text-shadow: 2px 2px 2px rgb(99, 103, 5);
+  text-shadow: 1px 1px 1px rgb(44, 46, 6);
   font-family: PressStart2P;
   text-transform: uppercase;
   color: var(--text-yellow);
@@ -109,13 +174,36 @@ a {
 .primary-nav > ol > li:last-of-type {
   border-right: 0;
 }
-
-.style-wrapper_intro {
-  display: grid;
-  grid-template-columns: 3em 1fr;
+.primary-nav #nav-intro {
+  -webkit-animation-name: nav-intro;
+          animation-name: nav-intro;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+.primary-nav #nav-skillz {
+  -webkit-animation-name: nav-skillz;
+          animation-name: nav-skillz;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+.primary-nav #nav-cv {
+  -webkit-animation-name: nav-cv;
+          animation-name: nav-cv;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+.primary-nav #nav-contact {
+  -webkit-animation-name: nav-contact;
+          animation-name: nav-contact;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
 }
 
-.intro_pipe {
+.intro_wrapper {
+  display: grid;
+  grid-template-columns: 3em 1fr 4.5em;
+}
+.intro_pipe-left {
   grid-column: 1;
   grid-row: 1/3;
   width: 3em;
@@ -123,13 +211,28 @@ a {
   box-shadow: 0em 1.7em 2.5em -1em rgb(3, 52, 10) inset;
   border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
 }
-
-.intro {
-  grid-column: 2;
+.intro_pipe-exit {
+  grid-column: 3;
+  grid-row: 2;
+  height: 2em;
+  background-color: red;
+  background: linear-gradient(to right, rgb(54, 109, 49), rgb(140, 213, 130) 35% 45%, rgb(9, 50, 5));
+  border-radius: 0.2em 0 0 0;
+  box-shadow: inset 0 -0.1em 0.3em rgb(9, 50, 5);
+  position: relative;
 }
-.intro > p {
+.intro_pipe-exit > div {
+  z-index: 1;
+  height: 0.1em;
+  position: absolute;
+  top: 2%;
+  width: 100%;
+  background: linear-gradient(90deg, transparent 5%, rgba(255, 255, 255, 0.563) 10% 12%, transparent 40%);
+}
+.intro_text {
+  grid-column: 2;
+  grid-row: 1/3;
   padding-inline: 1em;
-  background-color: var(--accent-blue);
   padding-block: 1.2em;
 }
 
@@ -170,7 +273,7 @@ a {
 .cv .cv_pipe > h2 {
   grid-row: 1;
   grid-column: 3;
-  font-size: 1.5em;
+  font-size: 1.2em;
   margin-block: auto;
   text-align: center;
   text-transform: uppercase;
