--- a/css/index.scss
+++ b/css/index.scss
@@ -16,22 +16,29 @@
 
   // Sizes
   --footer-height: 7em;
+
+  --header-height: 10.5em;
+  --wes-height: 5em;
+
+  --header-floor: calc(var(--header-height) - var(--wes-height));
 }
 
 html {
-  // overflow-y: hidden;
-}
+  background: linear-gradient(
+    to top,
+    rgb(115, 162, 233),
+    rgb(91, 140, 213),
+    rgb(31, 67, 121),
+    rgb(45, 78, 120),
+    rgb(91, 140, 213),
+    rgb(115, 162, 233)
+  );
 
-body {
-  background-color: var(--accent-blue);
-  color: var(--accent-white);
-  // min-height: 100%;
   font-family: OpenSans;
 }
 
-main {
-  // overflow-y: auto;
-  // margin-bottom: 10em;
+body {
+  color: var(--accent-white);
 }
 
 a {
@@ -39,26 +46,84 @@ a {
   color: var(--accent-white);
 }
 
-.header-primary {
-  // position: absolute;
-  // min-height: 5em;
-
+.header {
   display: grid;
-  grid-template-columns: 3em auto;
+  grid-template-columns: 3em 1fr 8em;
   grid-template-rows: 4em 2.5em 4em;
+  position: relative;
 
-  & .piranha_plant {
-    width: 3.5em;
-    margin-top: auto;
-    margin-left: -0.2em;
+  &_jump-block {
+    position: absolute;
+    animation-duration: 10s;
+    margin-top: 0.5em;
+    width: 2.5em;
+
+    &-first {
+      right: 10em;
+      animation-name: box-first;
+    }
+    &-second {
+      right: 13.5em;
+      animation-name: box-second;
+    }
+  }
+
+  &_entry-pipe {
+    z-index: 1;
+    grid-row: 1;
+    grid-column: 3;
+    height: 2em;
+    width: 80%;
+    background-color: red;
+
+    background: linear-gradient(
+      to right,
+      rgb(54, 109, 49),
+      rgb(140, 213, 130) 15% 25%,
+      rgb(9, 50, 5)
+    );
+    border-radius: 0 0 0 0.2em;
+    box-shadow: inset 0 -0.1em 0.3em rgb(9, 50, 5);
+  }
+
+  & .super-wes {
+    animation-name: super-wes;
+    top: -3em;
+    animation-duration: 10s;
+    grid-row: 1;
+    grid-column: 3;
+    width: 4em;
+    height: 5em;
+    transform: scalex(-1);
+    position: absolute;
+    right: 3em;
+
+    &_still,
+    &_jump {
+      animation-duration: 10s;
+      width: 4em;
+      height: 5em;
+      position: absolute;
+    }
+
+    &_still {
+      animation-name: still;
+    }
+
+    &_jump {
+      animation-name: jump;
+      opacity: 0;
+    }
   }
 
   &_pipe_end_wrapper {
     width: 3.4em;
     grid-row: 2;
+    z-index: 1;
   }
 
   &_pipe_end {
+    z-index: 1;
     height: 100%;
     background: linear-gradient(
       to right,
@@ -72,6 +137,7 @@ a {
     position: relative;
 
     &_connect {
+      z-index: 1;
       height: 0.1em;
       position: absolute;
       top: 2%;
@@ -86,6 +152,7 @@ a {
   }
 
   &_pipe {
+    z-index: 1;
     // grid-column: 1;
     grid-row: 3;
     width: 3em;
@@ -104,23 +171,22 @@ a {
   }
 
   & > h1 {
-    grid-column: 2;
+    grid-column: 2/4;
     grid-row: 3;
     margin: auto;
-    text-shadow: 1px 1px 1px #000;
+    text-shadow: 1px 2px 2px #000;
     text-align: center;
     font-weight: bold;
-    font-family: PressStart2P;
+    font-family: pressstart2p;
     font-size: 1.5em;
     text-transform: uppercase;
-    color: rgb(255, 238, 0);
+    color: var(--text-yellow);
   }
 }
 
 .primary-nav {
   position: sticky;
   top: 0;
-  // grid-column: 2;
   z-index: 10;
 
   width: 100%;
@@ -128,7 +194,7 @@ a {
 
   background: linear-gradient(
     to top,
-    rgb(54, 109, 49),
+    rgb(31, 70, 28),
     rgb(140, 213, 130) 25% 40%,
     rgb(9, 50, 5)
   );
@@ -144,8 +210,9 @@ a {
 
       & > a {
         margin: auto;
+        letter-spacing: 0em;
         font-size: 0.75em;
-        text-shadow: 2px 2px 2px rgb(99, 103, 5);
+        text-shadow: 1px 1px 1px rgb(44, 46, 6);
         font-family: PressStart2P;
         text-transform: uppercase;
         color: var(--text-yellow);
@@ -175,40 +242,87 @@ a {
       }
     }
   }
-}
 
-.style-wrapper_intro {
-  display: grid;
-  grid-template-columns: 3em 1fr;
-}
-
-.intro_pipe {
-  grid-column: 1;
-  grid-row: 1/3;
-  width: 3em;
-
-  background: linear-gradient(
-    to right,
-    rgb(54, 109, 49),
-    rgb(140, 213, 130) 25% 40%,
-    rgb(9, 50, 5)
-  );
-
-  box-shadow: 0em 1.7em 2.5em -1em rgb(3, 52, 10) inset;
-
-  border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
+  #nav {
+    &-intro {
+      animation-name: nav-intro;
+      animation-duration: 10s;
+    }
+    &-skillz {
+      animation-name: nav-skillz;
+      animation-duration: 10s;
+    }
+    &-cv {
+      animation-name: nav-cv;
+      animation-duration: 10s;
+    }
+    &-contact {
+      animation-name: nav-contact;
+      animation-duration: 10s;
+    }
+  }
 }
 
 .intro {
-  // padding-top: 1.5em;
-  // border-left: 3em ridge var(--accent-green);
-  // display: grid;
-  // grid-template-columns: 3em 1fr;
-  grid-column: 2;
+  &_wrapper {
+    display: grid;
+    grid-template-columns: 3em 1fr 4.5em;
+  }
 
-  & > p {
+  &_pipe-left {
+    grid-column: 1;
+    grid-row: 1/3;
+    width: 3em;
+
+    background: linear-gradient(
+      to right,
+      rgb(54, 109, 49),
+      rgb(140, 213, 130) 25% 40%,
+      rgb(9, 50, 5)
+    );
+
+    box-shadow: 0em 1.7em 2.5em -1em rgb(3, 52, 10) inset;
+
+    border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
+  }
+
+  &_pipe-exit {
+    grid-column: 3;
+    grid-row: 2;
+    height: 2em;
+
+    background-color: red;
+
+    background: linear-gradient(
+      to right,
+      rgb(54, 109, 49),
+      rgb(140, 213, 130) 35% 45%,
+      rgb(9, 50, 5)
+    );
+    border-radius: 0.2em 0 0 0;
+    box-shadow: inset 0 -0.1em 0.3em rgb(9, 50, 5);
+
+    position: relative;
+
+    & > div {
+      z-index: 1;
+      height: 0.1em;
+      position: absolute;
+      top: 2%;
+      width: 100%;
+      background: linear-gradient(
+        90deg,
+        transparent 5%,
+        rgba(255, 255, 255, 0.563) 10% 12%,
+        transparent 40%
+      );
+    }
+  }
+
+  &_text {
+    grid-column: 2;
+    grid-row: 1/3;
     padding-inline: 1em;
-    background-color: var(--accent-blue);
     padding-block: 1.2em;
   }
 }
@@ -294,7 +408,7 @@ a {
     & > h2 {
       grid-row: 1;
       grid-column: 3;
-      font-size: 1.5em;
+      font-size: 1.2em;
       margin-block: auto;
       text-align: center;
       text-transform: uppercase;
@@ -351,10 +465,8 @@ a {
 
       display: flex;
       flex-direction: column;
-      // width: 0;
       & > img {
         width: 2em;
-        // height: 2em;
         margin: auto;
         filter: invert(100%);
       }
