--- a/css/index.css
+++ b/css/index.css
@@ -2,13 +2,17 @@
   font-family: PressStart2P;
   src: url("../fonts/PressStart2P/PressStart2P-Regular.ttf");
 }
+@font-face {
+  font-family: Montserrat;
+  src: url("../fonts/Montserrat/Montserrat-VariableFont_wght.ttf");
+}
 :root {
   --accent-white: #ffffff;
   --accent-blue: #3f68af;
   --accent-green: #19bb07;
   --accent-green-dark: #107c04;
   --text-yellow: rgb(255, 238, 0);
-  --footer-height: 7em;
+  --footer-height: 9em;
   --header-height: 10.5em;
   --wes-height: 5em;
   --header-floor: calc(var(--header-height) - var(--wes-height));
@@ -16,7 +20,7 @@
 
 html {
   background: linear-gradient(to top, rgb(115, 162, 233), rgb(91, 140, 213), rgb(31, 67, 121), rgb(45, 78, 120), rgb(91, 140, 213), rgb(115, 162, 233));
-  font-family: OpenSans;
+  font-family: Montserrat;
 }
 
 body {
@@ -76,7 +80,7 @@ a {
   position: absolute;
   right: 3em;
 }
-.header .super-wes_still, .header .super-wes_jump {
+.header .super-wes > img {
   -webkit-animation-duration: 10s;
           animation-duration: 10s;
   width: 4em;
@@ -122,7 +126,37 @@ a {
   box-shadow: 0em 2em 2em -1em rgb(3, 52, 10) inset;
   border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
 }
+@-webkit-keyframes page-title {
+  from {
+    opacity: 0;
+  }
+  57% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  57.5% {
+    opacity: 0;
+    transform: scale(1);
+  }
+}
+@keyframes page-title {
+  from {
+    opacity: 0;
+  }
+  57% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  57.5% {
+    opacity: 0;
+    transform: scale(1);
+  }
+}
 .header > h1 {
+  -webkit-animation-name: page-title;
+          animation-name: page-title;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
   grid-column: 2/4;
   grid-row: 3;
   margin: auto;
@@ -201,7 +235,28 @@ a {
 
 .intro_wrapper {
   display: grid;
-  grid-template-columns: 3em 1fr 4.5em;
+  grid-template-columns: 3em 1fr 3.7em;
+  grid-template-rows: 1fr 1fr;
+  min-height: 14em;
+}
+.intro_super-wes {
+  grid-column: 2/4;
+  grid-row: 2;
+  -webkit-animation-name: intro_super-wes;
+          animation-name: intro_super-wes;
+  -webkit-animation-duration: 12s;
+          animation-duration: 12s;
+  width: 6em;
+  height: 9em;
+  margin-top: auto;
+}
+.intro_super-wes > img {
+  max-width: 8em;
+  max-height: 9em;
+  position: absolute;
+}
+.intro_super-wes-jump {
+  opacity: 0;
 }
 .intro_pipe-left {
   grid-column: 1;
@@ -215,6 +270,7 @@ a {
   grid-column: 3;
   grid-row: 2;
   height: 2em;
+  margin-top: auto;
   background-color: red;
   background: linear-gradient(to right, rgb(54, 109, 49), rgb(140, 213, 130) 35% 45%, rgb(9, 50, 5));
   border-radius: 0.2em 0 0 0;
@@ -231,9 +287,23 @@ a {
 }
 .intro_text {
   grid-column: 2;
-  grid-row: 1/3;
-  padding-inline: 1em;
-  padding-block: 1.2em;
+  grid-row: 1;
+  padding-top: 2.2em;
+  color: var(--text-yellow);
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-inline: auto;
+}
+.intro_text > li {
+  margin-bottom: 0.5em;
+}
+.intro_text > li:nth-of-type(2) {
+  margin-left: 1.5em;
+}
+.intro_text > li:nth-of-type(3) {
+  margin-left: 3em;
+  width: 100%;
 }
 
 .cv {
@@ -243,10 +313,10 @@ a {
   --cv-input-height: 6em;
   --cv-input-plus-divider-height: 7.2em;
 }
-.cv :nth-child(4) p {
+.cv :nth-child(4) .skillz_content {
   margin-top: calc(var(--cv-input-plus-divider-height) * -1);
 }
-.cv :nth-child(5) p {
+.cv :nth-child(5) .skillz_content {
   margin-top: calc(var(--cv-input-plus-divider-height) * -2);
 }
 .cv .cv_pipe {
@@ -319,15 +389,58 @@ a {
 .cv_elements > input {
   opacity: 0%;
 }
-.cv_elements > input:checked ~ p {
-  height: 100%;
+.cv_elements > input:checked ~ .skillz_content {
   display: inline-block;
+  height: 100%;
 }
-.cv_elements > p {
+.cv_elements > .skillz_content {
   grid-row: 1;
   grid-column: 1;
   display: none;
-  padding-top: 0.8em;
+  padding-top: 0.4em;
+  padding-left: 0.5em;
+  height: 100%;
+}
+.cv_elements > .skillz_content > table {
+  width: 100%;
+  display: flex;
+}
+.cv_elements > .skillz_content > table:nth-of-type(2) {
+  margin-block: 1em;
+}
+.cv_elements > .skillz_content > table th {
+  padding-block: 1em;
+}
+.cv_elements > .skillz_content > table td {
+  line-height: 1.5em;
+  color: var(--text-yellow);
+  font-weight: 600;
+}
+.cv_elements > .skillz_content .skillz_content_experience th {
+  font-family: PressStart2P;
+}
+.cv_elements > .skillz_content .skillz_content_experience td {
+  padding-left: 2em;
+}
+.cv_elements > .skillz_content .skillz_content_education caption {
+  padding-top: 1em;
+  font-family: PressStart2P;
+  position: absolute;
+}
+.cv_elements > .skillz_content .skillz_content_education th {
+  padding-top: 4em;
+  text-align: center;
+}
+.cv_elements > .skillz_content .skillz_content_education td {
+  padding-right: 1em;
+}
+.cv_elements > .skillz_content_easter-egg h2 {
+  font-family: PressStart2P;
+  line-height: 2em;
+  margin-bottom: 6em;
+}
+.cv_elements > .skillz_content_easter-egg img {
+  margin-left: 3em;
 }
 .cv_elements_divider_last {
   width: 3.7em;
@@ -339,6 +452,9 @@ a {
   border-radius: 0.15em 0 0 0.15em;
 }
 
+footer {
+  font-family: PressStart2P;
+}
 footer .footer-spacer {
   grid-row: 1;
   height: var(--footer-height);
@@ -369,11 +485,39 @@ footer .footer_container > .footer-border-2 {
   background: linear-gradient(225deg, #437831 25%, transparent 25%) -3px 0, linear-gradient(135deg, #437831 25%, transparent 25%) -3px 0, linear-gradient(315deg, #437831 25%, transparent 25%), linear-gradient(45deg, #437831 25%, transparent 25%);
   background-size: 6px 6px;
 }
-footer .footer_container > .test2 {
+footer .footer_container > .footer-content {
   grid-row: 2;
   background: linear-gradient(135deg, rgba(146, 102, 20, 0.5019607843) 50%, transparent 0), linear-gradient(-135deg, rgba(146, 102, 20, 0.5019607843) 50%, transparent 0);
   background-size: 1em 1em;
-  background-color: #f4a460;
+  background-color: #c4722a;
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+}
+footer .footer_container > .footer-content address {
+  text-align: center;
+  margin: auto;
+  line-height: 1.5em;
+  padding-block: 0.5em;
+}
+footer .footer_container > .footer-content h2 {
+  font-size: 1.2em;
+  text-transform: uppercase;
+  color: #fff;
+  text-shadow: 2px 2px 2px #000;
+}
+footer .footer_container > .footer-content hr {
+  height: 2px;
+  width: 100%;
+  color: #ffffff;
+  background-color: #cccccc;
+}
+footer .footer_container > .footer-content a {
+  color: #fff;
+  display: block;
+  text-shadow: 2px 2px 2px #000;
+}
+footer .footer_container > .footer-content .footer-socials {
+  margin: 0.2em;
 }
 
 .scr-only {
