--- a/css/index.scss
+++ b/css/index.scss
@@ -3,6 +3,11 @@
   src: url("../fonts/PressStart2P/PressStart2P-Regular.ttf");
 }
 
+@font-face {
+  font-family: Montserrat;
+  src: url("../fonts/Montserrat/Montserrat-VariableFont_wght.ttf");
+}
+
 // Global Variables
 :root {
   // Colors
@@ -15,7 +20,7 @@
   --text-yellow: rgb(255, 238, 0);
 
   // Sizes
-  --footer-height: 7em;
+  --footer-height: 9em;
 
   --header-height: 10.5em;
   --wes-height: 5em;
@@ -34,7 +39,7 @@ html {
     rgb(115, 162, 233)
   );
 
-  font-family: OpenSans;
+  font-family: Montserrat;
 }
 
 body {
@@ -98,8 +103,7 @@ a {
     position: absolute;
     right: 3em;
 
-    &_still,
-    &_jump {
+    & > img {
       animation-duration: 10s;
       width: 4em;
       height: 5em;
@@ -153,7 +157,6 @@ a {
 
   &_pipe {
     z-index: 1;
-    // grid-column: 1;
     grid-row: 3;
     width: 3em;
     height: 100%;
@@ -170,7 +173,25 @@ a {
     border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
   }
 
+  @keyframes page-title {
+    from {
+      opacity: 0;
+    }
+
+    57% {
+      opacity: 0;
+      transform: scale(0);
+    }
+
+    57.5% {
+      opacity: 0;
+      transform: scale(1);
+    }
+  }
+
   & > h1 {
+    animation-name: page-title;
+    animation-duration: 10s;
     grid-column: 2/4;
     grid-row: 3;
     margin: auto;
@@ -266,7 +287,30 @@ a {
 .intro {
   &_wrapper {
     display: grid;
-    grid-template-columns: 3em 1fr 4.5em;
+    grid-template-columns: 3em 1fr 3.7em;
+    grid-template-rows: 1fr 1fr;
+    min-height: 14em;
+  }
+
+  &_super-wes {
+    grid-column: 2/4;
+    grid-row: 2;
+    animation-name: intro_super-wes;
+    animation-duration: 12s;
+    // position: absolute;
+    width: 6em;
+    height: 9em;
+    margin-top: auto;
+
+    & > img {
+      max-width: 8em;
+      max-height: 9em;
+      position: absolute;
+    }
+
+    &-jump {
+      opacity: 0;
+    }
   }
 
   &_pipe-left {
@@ -280,7 +324,6 @@ a {
       rgb(140, 213, 130) 25% 40%,
       rgb(9, 50, 5)
     );
-
     box-shadow: 0em 1.7em 2.5em -1em rgb(3, 52, 10) inset;
 
     border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
@@ -290,6 +333,7 @@ a {
     grid-column: 3;
     grid-row: 2;
     height: 2em;
+    margin-top: auto;
 
     background-color: red;
 
@@ -321,9 +365,27 @@ a {
 
   &_text {
     grid-column: 2;
-    grid-row: 1/3;
-    padding-inline: 1em;
-    padding-block: 1.2em;
+    grid-row: 1;
+    padding-top: 2.2em;
+    color: var(--text-yellow);
+    font-size: 1.2em;
+    text-transform: uppercase;
+    font-weight: 600;
+
+    margin-inline: auto;
+
+    & > li {
+      margin-bottom: 0.5em;
+    }
+
+    & > li:nth-of-type(2) {
+      margin-left: 1.5em;
+    }
+
+    & > li:nth-of-type(3) {
+      margin-left: 3em;
+      width: 100%;
+    }
   }
 }
 
@@ -337,13 +399,13 @@ a {
   --cv-input-plus-divider-height: 7.2em;
 
   :nth-child(4) {
-    p {
+    .skillz_content {
       margin-top: calc(var(--cv-input-plus-divider-height) * -1);
     }
   }
 
   :nth-child(5) {
-    p {
+    .skillz_content {
       margin-top: calc(var(--cv-input-plus-divider-height) * -2);
     }
   }
@@ -474,19 +536,82 @@ a {
 
     & > input {
       opacity: 0%;
-      // z-index: 1;
 
-      &:checked ~ p {
-        height: 100%;
+      &:checked ~ .skillz_content {
         display: inline-block;
+        height: 100%;
       }
     }
 
-    & > p {
-      grid-row: 1;
-      grid-column: 1;
-      display: none;
-      padding-top: 0.8em;
+    & > .skillz {
+      &_content {
+        grid-row: 1;
+        grid-column: 1;
+        display: none;
+        padding-top: 0.4em;
+        padding-left: 0.5em;
+        height: 100%;
+
+        & > table {
+          width: 100%;
+          // table-layout: fixed;
+          display: flex;
+
+          &:nth-of-type(2) {
+            margin-block: 1em;
+          }
+
+          th {
+            padding-block: 1em;
+            // font-family: PressStart2P;
+          }
+          td {
+            line-height: 1.5em;
+            color: var(--text-yellow);
+            font-weight: 600;
+          }
+        }
+
+        .skillz_content_experience {
+          th {
+            font-family: PressStart2P;
+          }
+
+          td {
+            padding-left: 2em;
+          }
+        }
+
+        .skillz_content_education {
+          caption {
+            padding-top: 1em;
+            font-family: PressStart2P;
+            position: absolute;
+          }
+
+          th {
+            padding-top: 4em;
+            text-align: center;
+            // font-family: ;
+            // font-size: 1.5em;
+          }
+
+          td {
+            padding-right: 1em;
+          }
+        }
+        &_easter-egg {
+          h2 {
+            font-family: PressStart2P;
+            line-height: 2em;
+            margin-bottom: 6em;
+          }
+
+          img {
+            margin-left: 3em;
+          }
+        }
+      }
     }
   }
 
@@ -508,6 +633,8 @@ a {
 }
 
 footer {
+  font-family: PressStart2P;
+
   & .footer-spacer {
     grid-row: 1;
     height: var(--footer-height);
@@ -550,12 +677,47 @@ footer {
       // background-color: greenyellow;
     }
 
-    & > .test2 {
+    & > .footer-content {
       grid-row: 2;
       background: linear-gradient(135deg, #92661480 50%, transparent 0),
         linear-gradient(-135deg, #92661480 50%, transparent 0);
       background-size: 1em 1em;
-      background-color: #f4a460;
+      background-color: #c4722a;
+      // box-shadow: inset 50px 50px 50px 60px #00000088;
+      display: grid;
+      grid-template-columns: 4fr 1fr;
+
+      address {
+        text-align: center;
+        margin: auto;
+        line-height: 1.5em;
+        // text-shadow: 0.5em 0.5em 0.5em #000;
+        padding-block: 0.5em;
+      }
+
+      h2 {
+        font-size: 1.2em;
+        text-transform: uppercase;
+        color: #fff;
+        text-shadow: 2px 2px 2px #000;
+      }
+
+      hr {
+        height: 2px;
+        width: 100%;
+        color: #ffffff;
+        background-color: #cccccc;
+      }
+
+      a {
+        color: #fff;
+        display: block;
+        text-shadow: 2px 2px 2px #000;
+      }
+
+      .footer-socials {
+        margin: 0.2em;
+      }
     }
   }
 }
